--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.forcetower.uefs">
+    package="com.forcetower.uefs">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
-    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".UEFSApplication"
@@ -27,13 +27,13 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.gms.games.APP_ID"
-            android:value="@string/app_id"/>
+            android:value="@string/app_id" />
 
         <activity android:name=".view.login.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -41,26 +41,29 @@
             android:label="@string/title_activity_logged"
             android:theme="@style/AppTheme.NavigationDrawer">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
         <activity
             android:name=".view.settings.SettingsActivity"
             android:label="@string/settings"
-            android:theme="@style/AppTheme.PreferencesStyle">
-        </activity>
+            android:theme="@style/AppTheme.PreferencesStyle" />
+        <activity
+            android:name=".view.event.EventDetailsActivity"
+            android:theme="@style/AppTheme.EventsActivity"/>
         <activity
             android:name=".view.about.AboutActivity"
-            android:label="@string/about_app">
-        </activity>
+            android:label="@string/about_app" />
         <activity
             android:name=".view.control_room.ControlRoomActivity"
-            android:label="@string/control_room">
-        </activity>
+            android:label="@string/control_room" />
+
+        <activity android:name=".view.universe.UniverseActivity" />
+        <activity android:name=".game.g2048.activity.Game2048Activity" />
 
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+            android:theme="@style/Base.Theme.AppCompat" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -69,36 +72,33 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_unes"/>
+            android:resource="@drawable/ic_unes" />
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/colorPrimary"/>
+            android:resource="@color/colorPrimary" />
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
-            android:value="@string/default_firebase_notification_channel_id"/>
+            android:value="@string/default_firebase_notification_channel_id" />
 
-        <service android:name=".svc.firebase.UNESFirebaseMessagingService"
-                 android:permission="true">
+        <service
+            android:name=".svc.firebase.UNESFirebaseMessagingService"
+            android:permission="true">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service android:name=".svc.firebase.UNESFirebaseInstanceIDService"
-                 android:permission="true">
+        <service
+            android:name=".svc.firebase.UNESFirebaseInstanceIDService"
+            android:permission="true">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
-        <activity android:name=".view.universe.UniverseActivity">
-        </activity>
-        <activity android:name=".game.g2048.activity.Game2048Activity">
-        </activity>
     </application>
 
 </manifest>
