--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@
 org.gradle.jvmargs=-Xmx1536m
 
 version=6.1.3-RC2
+android.enableD8=true
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
